feat: added envs and callbacks handling

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,9 @@
 {
+  "main": {
+    "forms": {
+      "isRequired": "{{field}} is required"
+    }
+  },
   "authModal": {
     "title": "Hi, Welcome to DedoAI 👋",
     "social": {
