feat: followup auth modal staged

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,11 +34,12 @@
       "confirmEmailLabel": "Confirm your email",
       "confirmEmailDescription": "We sent a 6 digit code to <span>{{email}}</span>. Please enter it below to confirm your email.",
       "enterValidCode": "Please enter a valid code",
-      "insertPhoneNumber": "Insert your phone number",
+      "enterPhoneNumber": "Enter your phone number",
+      "enterPhoneNumberDescription": "We use your phone number for added security, sending verification codes to keep your account safe.",
       "phoneNumberPrefix": "Prefix",
       "phoneNumber": "Phone number",
       "confirmPhoneNumberLabel": "Confirm your phone number",
-      "confirmPhoneNumberDescription": "We sent a 6 digit code to <span>{{phoneNumberPrefix}}{{phoneNumber}}</span>. Please enter it below to confirm your phone number.",
+      "confirmPhoneNumberDescription": "We sent a 6 digit code to <span>{{phoneNumberPrefix}} {{phoneNumber}}</span>. Please enter it below to confirm your phone number.",
       "sendSms": "Send SMS",
       "sendSmsFirst": "You need to send the SMS first",
       "resend": "Resend code{{article}}{{time}}",
