--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -45,8 +45,10 @@
       "resend": "Resend code{{article}}{{time}}",
       "resendIn": " in",
       "createPassword": "Create your password",
+      "createPasswordDescription": "Enter your password below to complete the registration process. Ensure it’s strong and secure.",
       "password": "Password",
-      "passwordPlaceholder": "Password must be 8 characters long",
+      "enterYourPassword": "Enter your password",
+      "passwordPlaceholder": "Password must be at least 8 characters long",
       "confirmPasswordPlaceholder": "Repeat password",
       "passwordsDontMatch": "Passwords do not match",
       "pleaseRepeatPassword": "Please repeat your password",
