--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -54,7 +54,13 @@
       "passwordsDontMatch": "Passwords do not match",
       "pleaseRepeatPassword": "Please repeat your password",
       "acceptNewsletter": "Stay updated with the latest news and personalized offers from DedoAI via email.",
-      "invalidCode": "Invalid code"
+      "invalidCode": "Invalid code",
+      "successAccountCreation": {
+        "title": "Account successfully created",
+        "description": "Now you can explore the marketplace and the services it offers. When you're ready to start your adventure, remember to verify your identity.",
+        "verifyIdentity": "Verify your identity",
+        "exploreDedoai": "Explore DedoAI"
+      }
     },
     "resendCode": "Resend code",
     "forgotPassword": {
@@ -62,7 +68,12 @@
       "description": "Please enter your email address to receive a link for resetting your password.",
       "email": "Email",
       "emailPlaceholder": "Enter your email address",
-      "cta": "Send request"
+      "cta": "Send request",
+      "successResetPasswordSent": {
+        "title": "Security link sent to your inbox",
+        "description": "Please check your email for the password reset link. If you don't see it, check your spam or junk folder.",
+        "goBackHome": "Go back home"
+      }
     },
     "resetPassword": {
       "createNewPassword": "Create New Password",
