--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -54,7 +54,13 @@
       "passwordsDontMatch": "Les mots de passe ne correspondent pas",
       "pleaseRepeatPassword": "Veuillez répéter votre mot de passe",
       "acceptNewsletter": "Restez informé des dernières nouvelles et offres personnalisées de DedoAI par e-mail.",
-      "invalidCode": "Code invalide"
+      "invalidCode": "Code invalide",
+      "successAccountCreation": {
+        "title": "Compte créé avec succès",
+        "description": "Vous pouvez maintenant explorer le marché et les services qu'il offre. Lorsque vous êtes prêt à commencer votre aventure, n'oubliez pas de vérifier votre identité.",
+        "verifyIdentity": "Vérifiez votre identité",
+        "exploreDedoai": "Explorez DedoAI"
+      }
     },
     "resendCode": "Renvoyer le code",
     "forgotPassword": {
@@ -62,7 +68,12 @@
       "description": "Veuillez entrer votre adresse e-mail pour recevoir un lien de réinitialisation de votre mot de passe.",
       "email": "E-mail",
       "emailPlaceholder": "Entrez votre adresse e-mail",
-      "cta": "Envoyer la demande"
+      "cta": "Envoyer la demande",
+      "successResetPasswordSent": {
+        "title": "Lien de sécurité envoyé à votre boîte de réception",
+        "description": "Veuillez vérifier votre e-mail pour le lien de réinitialisation du mot de passe. Si vous ne le voyez pas, vérifiez votre dossier spam ou courrier indésirable.",
+        "goBackHome": "Retourner à l'accueil"
+      }
     },
     "resetPassword": {
       "createNewPassword": "Créer un Nouveau Mot de Passe",
