--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -58,8 +58,8 @@
       "successAccountCreation": {
         "title": "Cont creat cu succes",
         "description": "Acum puteți explora piața și serviciile oferite. Când sunteți gata să începeți aventura, nu uitați să vă verificați identitatea.",
-        "verifyIdentity": "Verificați-vă identitatea",
-        "exploreDedoai": "Explorați DedoAI"
+        "cta1": "Verificați-vă identitatea",
+        "cta2": "Explorați DedoAI"
       }
     },
     "resendCode": "Retrimiteți codul",
@@ -72,13 +72,18 @@
       "successResetPasswordSent": {
         "title": "Link de securitate trimis în căsuța dvs. de e-mail",
         "description": "Vă rugăm să verificați e-mailul pentru linkul de resetare a parolei. Dacă nu îl vedeți, verificați folderul de spam sau junk.",
-        "goBackHome": "Întoarceți-vă acasă"
+        "cta1": "Întoarceți-vă acasă"
       }
     },
     "resetPassword": {
       "createNewPassword": "Creează o Nouă Parolă",
       "createANewPassword": "Creează o Nouă Parolă",
-      "enterNewPasswordBelow": "Introduceți parola nouă mai jos pentru a finaliza procesul de resetare. Asigurați-vă că este puternică și sigură."
+      "enterNewPasswordBelow": "Introduceți parola nouă mai jos pentru a finaliza procesul de resetare. Asigurați-vă că este puternică și sigură.",
+      "successReset": {
+        "title": "Resetarea parolei a fost realizată cu succes",
+        "description": "Acum vă puteți autentifica cu noua parolă. Dacă întâmpinați probleme, vă rugăm să contactați suportul nostru.",
+        "cta1": "Înapoi la Autentificare"
+      }
     },
     "contactUs": {
       "title": "Contactați-ne",
